# cherry-harvest

./: .gitignore  Cargo.toml  LICENSE_APACHE  LICENSE_MIT  README.md  notes.md  pom.xml  tmp.txt
benches/: ann_preprocessing.rs  ann_search.rs  hnsw_search.rs  repo_loading.rs  similarity.rs  traditional_lsh.rs
output/: oauth2-proxy(local).json  oauth2-proxy-gitcherry.json  oauth2-proxy.json  superset.json  tinker.json
src/: debug.rs  error.rs  git.rs  lib.rs  main.rs  sampling.rs  search.rs  setup.rs
src/algorithms/: mod.rs
src/algorithms/diff_based/: mod.rs
src/algorithms/metadata_based/: message_scan.rs  mod.rs
src/git/: github.rs  mod.rs  util.rs
src/git/github/: extensions.rs  forks.rs
src/main/java/: CherryPick.java  CherrySearch.java  CherrySource.java  CherryTarget.java  Main.java  ResultsFilter.java
src/main/java/cherry/: CherryPick.java  CherrySearch.java  CherrySource.java  CherryTarget.java  GitCherrySearch.java  ScanCherrySearch.java
src/main/java/filter/: Filter.java  MessageFilter.java  OrFilter.java  TimeFilter.java
src/main/java/util/: Branch.java  Commit.java  GitUtil.java  MatchingCommitNotFoundException.java  ParentRevFilter.java  Repository.java  SourceCommitNotFoundException.java  UnequalCherryCandidatesException.java
src/method/: metadata_based.rs  mod.rs
src/method/diff_based/: diff_exact.rs  diff_similarity.rs
src/method/metadata_based/: message_scan.rs
src/sampling/: fully_random.rs  most_stars.rs
src/search/: ann.rs  brute_force.rs  diff_based.rs  methods.rs  util.rs
src/search/ann/: preprocessing.rs  traditional_lsh.rs
src/search/diff_based/: diff_ann.rs  diff_brute_force.rs  diff_similarity.rs
src/search/methods/: ann.rs  diff_ann.rs  diff_brute_force.rs  diff_similarity.rs  exact_diff.rs  lsh.rs  message_scan.rs  random_projections_lsh.rs  similar_diff.rs  traditional_lsh.rs
src/search/methods/ann/: preprocessing.rs  traditional_lsh.rs
src/search/methods/lsh/: compare.rs  preprocessing.rs  traditional_lsh.rs
src/search/methods/similar_diff/: compare.rs
src/search/methods/traditional_lsh/: compare.rs  preprocessing.rs
src/search/util/: ann.rs  brute_force.rs
src/setup/: github.rs  sampling.rs
src/test/java/cherry/: CherrySearchTest.java  GitCherrySearchTest.java  ScanCherrySearchTest.java
src/test/java/filter/: MessageFilterTest.java  OrFilterTest.java  TimeFilterTest.java
src/test/java/util/: CommitTest.java  RepositoryTest.java
tests/: algorithms.rs  debugging.rs  ground_truth.rs  profiling.rs
tests/resources/: cherries_one.gt  cherries_one_gt.yaml
tests/util/: mod.rs
