[package]
name = "cherry-harvest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.16.1"
rand = "0.8.5"
temp-dir = "0.1.11"
env_logger = "0.10.0"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.14"
derivative = "2.2.0"
firestorm = { version= "0.5.1", features=["enable_system_time"] }
bit-vec = "0.6.3"
octocrab = {version = "0.18.1", features = ["stream"]}
tokio = {version = "1.25.0", features = ["full"] }
futures-util = "0.3.26"
reqwest = "0.11.14"
chrono = "0.4.23"
serde_json = "1.0.93"

[dev-dependencies]
criterion = "0.4.0"
criterion-macro = "0.4.0"

[[bench]]
name = "ann_preprocessing"
harness = false

[[bench]]
name = "traditional_lsh"
harness = false

[[bench]]
name = "similarity"
harness = false
